# learn_cmake

./: CMakeLists.txt
src/: CMakeLists.txt  hello.cpp
